Fixed scrolling issue on  devices while using css parallax

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -1,10 +1,12 @@
 header
   position: absolute
-  width: 100vw
+  // width: 100vw
   display: flex
   padding: 24px 24px
   background-color: none
   z-index: 10
+  left: 0
+  right: 0
 
   &.fixed
     position: fixed
@@ -22,7 +24,7 @@ header
 
   .header-navigation
     position: absolute
-    right: 72px
+    right: 24px
     padding-top: 4px
 
     @media(max-width: 760px)
