--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ head
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500&subset=greek' type='text/css')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300' type='text/css')
 body
-    .body.paralax
+    .body
         header
             .header-title
                 a(href="")
@@ -22,19 +22,19 @@ body
                 a(href="")
                     span.button Contact Me
 
-        .intro-section.paralax-group
-            .intro-background.paralax-layer.paralax-background
+        .intro-section.parallax-parent
+            .intro-background
                 .darken-20
-            .intro-title.paralax-layer.paralax-foreground
+            .intro-title
                 .intro-text
                     h3 DYLΛN LΛRSEN
                     h1 I do everything computers.
-        .about-section.paralax-group
-        .placeholder.paralax-group
+        .about-section
+        .placeholder
 
-        footer.paralax-group
-            .footer-content
-                p © Dylan Larsen, 2016
+        //footer.paralax-group
+        //    .footer-content
+        //        p © Dylan Larsen, 2016
                 
     script(type="text/javascript" src="js/jquery-2.2.3.min.js")
     script(type="text/javascript" src="js/script.min.js")
