--- a/css/_body.sass
+++ b/css/_body.sass
@@ -1,16 +1,20 @@
 .intro-section
+  position: relative
   height: 100vh
   width: 100vw
 
   .intro-background
+    position: fixed
+    height: 100vh
+    width: 100vw
     background:
-      image: url('../images/intro-background.jpg')
+      image: url('../images/intro-background-956.jpg')
       repeat: no-repeat
-      position: bottom center
-      size: cover
+      position: center calc(100% + 0px)
+      // size: cover // TODO: maybe use this?
 
   .intro-title
-    display: absolute
+    position: absolute
     // flex-direction: column
     height: 100%
     width: 100%
