--- a/css/_paralax.sass
+++ b/css/_paralax.sass
@@ -1,26 +1,3 @@
-.paralax
-  perspective: 1px
-  height: 100vh
-  overflow-x: hidden
-  overflow-y: visible
-  -webkit-overflow-scrolling: touch
-
-  .paralax-group
-    position: relative
-    // height: 100vh
-    transform-style: preserve-3d
-
-  .paralax-layer
-    position: absolute
-    top: 0
-    right: 0
-    bottom: 0
-    left: 0
-
-  .paralax-foreground
-    transform: translateZ(0)
-
-  .paralax-background
-    transform: translateZ(-1px) scale(2)
-    z-index: 0
-    overflow: none
+.parallax-parent
+  overflow: hidden
+  opacity: 0.99
