--- a/css/_body.sass
+++ b/css/_body.sass
@@ -1,7 +1,7 @@
 .intro-section
   position: relative
   height: 100vh
-  width: 100vw
+  width: 100%
 
   .intro-background
     position: fixed
@@ -45,5 +45,5 @@
 
 .about-section
   height: 200px
-  width: 100vw
+  width: 100%
   background-color: pink
