--- a/css/style.sass
+++ b/css/style.sass
@@ -5,7 +5,7 @@ body
     weight: 300
   text-rendering: optimizeLegibility
 
-@import header
+@import nav
 @import body
 @import footer
 @import paralax
