--- a/index.jade
+++ b/index.jade
@@ -8,7 +8,7 @@ head
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300' type='text/css')
 body
     .body
-        header
+        nav
             .header-title
                 a(href="")
                     span DYLΛN LΛRSEN
