Background size cover

--- a/css/_body.sass
+++ b/css/_body.sass
@@ -11,7 +11,9 @@
       image: url('../images/intro-background-956.jpg')
       repeat: no-repeat
       position: center calc(100% + 0px)
-      // size: cover // TODO: maybe use this?
+      size: cover // TODO: maybe use this?
+    // min-width: 100%
+    // min-height: 100%
 
   .intro-title
     position: absolute
