--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,7 @@ doctype html
 head
     meta(charset="utf-8")
     title Dylan Larsen
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="css/style.css" type="text/css")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600" type="text/css")
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500&subset=greek' type='text/css')
