Updated intro text positioning

--- a/index.jade
+++ b/index.jade
@@ -29,7 +29,7 @@ body
             .intro-title
                 .intro-text
                     h3 DYLΛN LΛRSEN
-                    h1 I do everything computers.
+                    h1 Lorem ipsum, dolor sit amet.
         .about-section
         .placeholder
 
