--- a/css/_body.sass
+++ b/css/_body.sass
@@ -17,12 +17,17 @@
 
   .intro-title
     position: absolute
-    // flex-direction: column
     height: 100%
     width: 100%
+    padding: 0 32px
+    box-sizing: border-box
 
     .intro-text
-      margin: calc(50vh - 64px) 0
+      // margin: calc(50vh - 64px) 0
+      height: 100%
+      display: flex
+      flex-direction: column
+      align-items: center
 
       h1, h3
         margin: auto auto
@@ -36,6 +41,7 @@
           family: 'Lato'
           size: 72px
           weight: 300
+        margin-top: 0
 
       h3
         color: #999
@@ -44,6 +50,7 @@
           weight: 200
         text-transform: uppercase
         letter-spacing: 4px
+        margin-bottom: 0
 
 .about-section
   height: 200px
