--- a/css/_body.sass
+++ b/css/_body.sass
@@ -54,6 +54,22 @@
         margin-bottom: 0
 
 .about-section
-  height: 200px
+  height: 100%
   width: 100%
-  background-color: pink
+  background-color: #f2f2e6
+  // background-color: honeydew
+
+  .about-content
+    width: 860px
+    margin: 0 auto
+
+    .about-image
+      width: 100%
+      display: flex
+
+      .profile-image
+        width: 250px
+        height: 250px
+        border-radius: 50%
+        margin: 0 auto
+        padding: 24px 0 24px
