Styled about section

--- a/css/style.sass
+++ b/css/style.sass
@@ -1,10 +1,4 @@
-body
-  margin: 0
-  font:
-    family: 'Ubuntu', 'Source Sans Pro', 'Helvetica Neue', 'Helvetica', sans-serif
-    weight: 300
-  text-rendering: optimizeLegibility
-
+@import base
 @import nav
 @import body
 @import footer
