--- a/css/_body.sass
+++ b/css/_body.sass
@@ -15,6 +15,7 @@
     // min-width: 100%
     // min-height: 100%
     transition: transform 0.075s cubic-bezier(0.14, 0.63, 0.14, 0.99) // cubic-bezier(0, 0, 0.2, 1) // cubic-bezier(0.22, 0.61, 0.36, 1)
+    pointer-events: none
 
   .intro-title
     position: absolute
@@ -33,8 +34,6 @@
       h1, h3
         margin: auto auto
         text-align: center
-        // justify-content: center
-        // align-items: center
 
       h1
         color: #eee
@@ -62,14 +61,20 @@
   .about-content
     width: 860px
     margin: 0 auto
+    padding: 0 0 32px 0
+    display: flex
 
     .about-image
-      width: 100%
-      display: flex
+      width: 25%
 
       .profile-image
-        width: 250px
-        height: 250px
+        width: 100%
+        height: 100%
         border-radius: 50%
-        margin: 0 auto
-        padding: 24px 0 24px
+        // margin: 0 auto
+
+    .text
+      height: 100%
+      width: 75%
+      padding-left: 24px
+      margin: auto 0
