Updated about section layout and responsiveness

--- a/css/_base.sass
+++ b/css/_base.sass
@@ -1,5 +1,8 @@
-\:root
+:root
   font-size: 16px
+
+  @media(max-width: 680px)
+    font-size: 12px
 
 body
   margin: 0
@@ -16,4 +19,3 @@ h1
     weight: 300
   margin: auto auto
   text-align: center
-  padding: 22px 0 14px 0
