--- a/css/style.sass
+++ b/css/style.sass
@@ -1,9 +1,9 @@
-@import base
-@import nav
-@import body
-@import footer
-@import parallax
-@import darken
+@import _base
+@import _nav
+@import _body
+@import _footer
+@import _parallax
+@import _darken
 
 .placeholder
   height: 125vh
