--- a/css/_nav.sass
+++ b/css/_nav.sass
@@ -16,7 +16,7 @@ nav
     span
       color: #eee
       font:
-        size: 24px
+        size: 1.5rem
         weight: 400
       text:
         transform: uppercase
