Moved intro parallax effects to new .parallax class

--- a/index.jade
+++ b/index.jade
@@ -18,13 +18,15 @@ body
                     span Home
                 a(href="#about")#about-nav
                     span About
-                a(href="#portfolio")#portfolio-nav
-                    span Portfolio
+                a(href="#images")#images-nav
+                    span Images
+                a(href="#films")#films-nav
+                    span Films
                 a(href="#contact")#contact-nav.button
                     span Contact Me
 
         #intro.intro-section.parallax-parent
-            .intro-background
+            .intro-background.parallax
                 .darken-20
             .intro-title
                 .intro-text
