--- a/css/_parallax.sass
+++ b/css/_parallax.sass
@@ -1,3 +1,15 @@
 .parallax-parent
   overflow: hidden
   opacity: 0.99
+
+.parallax
+  width: 100vw
+  position: fixed
+  background:
+    repeat: no-repeat
+    position: center bottom // calc(100% + 0px)
+    size: cover // TODO: maybe use this?
+  // min-width: 100%
+  // min-height: 100%
+  transition: transform 0.075s cubic-bezier(0.14, 0.63, 0.14, 0.99) // cubic-bezier(0, 0, 0.2, 1) // cubic-bezier(0.22, 0.61, 0.36, 1)
+  pointer-events: none
