Added images parallax section and updated nav scrolling

--- a/css/_nav.sass
+++ b/css/_nav.sass
@@ -59,5 +59,14 @@ nav
           color: #111
           background-color: #eee
 
+  &.fixed
+    .header-navigation
+      a
+        &.selected
+          color: #aaa
+
+        &:hover
+          color: #aaa
+
   a
     text-decoration: none
