--- a/index.jade
+++ b/index.jade
@@ -26,7 +26,7 @@ body
                     span Contact Me
 
         #intro.intro-section.parallax-parent
-            .intro-background.parallax
+            #intro-parallax.intro-background.parallax(style="background-image: url('./images/intro-background-956.jpg')")
                 .darken-20
             .intro-title
                 .intro-text
@@ -39,7 +39,11 @@ body
                 .about-image
                     img(src="./images/profile.jpg").profile-image
                 span.text Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-
+        #images.heading-section.parallax-parent
+            #images-parallax.heading-background.parallax(style="background-image: url('./images/images-background.jpg')")
+            .heading-title
+                .heading-text
+                    span Images
         .placeholder
 
         //footer.paralax-group
