--- a/css/_body.sass
+++ b/css/_body.sass
@@ -3,9 +3,6 @@
   height: 100vh
   width: 100%
 
-  .intro-background
-    background-image: url('../images/intro-background-956.jpg')
-
   .intro-title
     position: absolute
     height: 100%
@@ -101,3 +98,32 @@
       @media(max-width: 620px)
         width: 100%
         padding: 0 16px
+
+.heading-section
+  height: 300px
+
+  @media(max-width: 680px)
+    height: 200px
+
+  .heading-title
+    height: 100%
+    margin: 0 auto
+    text-align: center
+    display: flex
+    align-items: center
+    justify-content: center
+
+    .heading-text
+      color: #eee
+      font:
+        family: 'Lato'
+        size: 62px
+        weight: 300
+      margin-top: 0
+      z-index: 1
+
+      @media(max-width: 680px)
+        font-size: 44px
+
+      @media(max-width: 620px)
+        font-size: 36px
