--- a/css/_parallax.sass
+++ b/css/_parallax.sass
@@ -14,3 +14,5 @@
   // min-height: 100%
   transition: transform 0.075s cubic-bezier(0.14, 0.63, 0.14, 0.99) // cubic-bezier(0, 0, 0.2, 1) // cubic-bezier(0.22, 0.61, 0.36, 1)
   pointer-events: none
+  transform: translate3d(0px, 0px, -1px)
+  top: 0px
