--- a/css/_nav.sass
+++ b/css/_nav.sass
@@ -10,7 +10,9 @@ nav
 
   &.fixed
     position: fixed
-    background: rgba(0, 0, 0, 0.5)
+    background: rgba(0, 0, 0, 0.6)
+    backdrop-filter: blur(16px)
+    -webkit-backdrop-filter: blur(16px)
 
   .header-title
     span
