Updated font for h1's

--- a/css/_body.sass
+++ b/css/_body.sass
@@ -23,7 +23,7 @@
       h1
         color: #eee
         font:
-          family: 'Lato'
+          family: 'Source Sans Pro'
           size: 62px
           weight: 300
         margin-top: 0
@@ -113,7 +113,7 @@
     .heading-text
       color: #eee
       font:
-        family: 'Lato'
+        family: 'Source Sans Pro'
         size: 62px
         weight: 300
       margin-top: 0
