--- a/index.jade
+++ b/index.jade
@@ -6,7 +6,7 @@ head
     link(rel="stylesheet" href="css/style.css" type="text/css")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600" type="text/css")
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500&subset=greek' type='text/css')
-    link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300' type='text/css')
+    //- link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300' type='text/css')
 body
     .body
         nav
