Updated to use Ubuntu font

--- a/css/_body.sass
+++ b/css/_body.sass
@@ -23,7 +23,6 @@
       h1
         color: #eee
         font:
-          family: 'Source Sans Pro'
           size: 62px
           weight: 300
         margin-top: 0
@@ -111,13 +110,14 @@
     justify-content: center
 
     .heading-text
-      color: #eee
-      font:
-        family: 'Source Sans Pro'
-        size: 62px
-        weight: 300
       margin-top: 0
       z-index: 1
+      
+      h1
+        color: #eee
+        font:
+          size: 62px
+          weight: 300
 
       @media(max-width: 680px)
         font-size: 44px
