--- a/index.jade
+++ b/index.jade
@@ -45,7 +45,7 @@ body
                     .darken-20
                 .heading-title
                     .heading-text
-                        span Photos
+                        h1 Photos
         .placeholder
 
         //footer.paralax-group
