Updated navbar size for smaller screens

--- a/css/_nav.sass
+++ b/css/_nav.sass
@@ -8,6 +8,9 @@ nav
   left: 0
   right: 0
 
+  @media(max-width: 760px)
+    padding: 16px 16px
+
   &.fixed
     position: fixed
     background: rgba(0, 0, 0, 0.6)
