--- a/index.jade
+++ b/index.jade
@@ -8,49 +8,48 @@ head
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu:400,300,500&subset=greek' type='text/css')
     //- link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300' type='text/css')
 body
-    .body
-        nav
-            .header-title
-                a(href="")
-                    span DYLΛN LΛRSEN
-            .header-navigation
-                a(href="#intro")#intro-nav.selected
-                    span Home
-                a(href="#about")#about-nav
-                    span About
-                a(href="#images")#images-nav
-                    span Photos
-                a(href="#films")#films-nav
-                    span Films
-                a(href="#contact")#contact-nav.button
-                    span Contact Me
+    nav
+        .header-title
+            a(href="")
+                span DYLΛN LΛRSEN
+        .header-navigation
+            a(href="#intro")#intro-nav.selected
+                span Home
+            a(href="#about")#about-nav
+                span About
+            a(href="#images")#images-nav
+                span Photos
+            a(href="#films")#films-nav
+                span Films
+            a(href="#contact")#contact-nav.button
+                span Contact Me
 
-        #intro.intro-section.parallax-parent
-            #intro-parallax.intro-background.parallax(style="background-image: url('./images/intro-background-1440.jpg')")
-                .darken-30
-            .intro-title
-                .intro-text
-                    h3 DYLΛN LΛRSEN
-                    h1 Lorem ipsum, dolor sit amet.
-        #about.about-section
-            .about-title
-                h1 About
-            .about-content
-                .about-image
-                    img(src="./images/profile.jpg").profile-image
-                span.text Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
-        #images.parallax-parent
-            .heading-section
-                #images-parallax.heading-background.parallax(style="background-image: url('./images/images-background-1440.jpg')")
-                    .darken-20
-                .heading-title
-                    .heading-text
-                        h1 Photos
-        .placeholder
+    #intro.intro-section.parallax-parent
+        #intro-parallax.intro-background.parallax(style="background-image: url('./images/intro-background-1440.jpg')")
+            .darken-30
+        .intro-title
+            .intro-text
+                h3 DYLΛN LΛRSEN
+                h1 Lorem ipsum, dolor sit amet.
+    #about.about-section
+        .about-title
+            h1 About
+        .about-content
+            .about-image
+                img(src="./images/profile.jpg").profile-image
+            span.text Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
+    #images.parallax-parent
+        .heading-section
+            #images-parallax.heading-background.parallax(style="background-image: url('./images/images-background-1440.jpg')")
+                .darken-20
+            .heading-title
+                .heading-text
+                    h1 Photos
+    .placeholder
 
-        //footer.paralax-group
-        //    .footer-content
-        //        p © Dylan Larsen, 2016
+    footer
+        .footer-content
+            p © Dylan Larsen, 2016
                 
     script(type="text/javascript" src="js/jquery-2.2.3.min.js")
     script(type="text/javascript" src="js/jquery-ui-1.11.4.min.js")
