Added selection color and fixed nav button color

--- a/css/_nav.sass
+++ b/css/_nav.sass
@@ -61,7 +61,7 @@ nav
         margin-left: 12px
 
         &:hover
-          color: #111
+          color: #111 !important
           background-color: #eee
 
   &.fixed
