--- a/css/_base.sass
+++ b/css/_base.sass
@@ -7,6 +7,10 @@
 *
   box-sizing: border-box
 
+  &::selection
+    background-color: rgba(0, 0, 4, 0.7)
+    color: #fff
+
 body
   margin: 0
   font:
