--- a/css/_nav.sass
+++ b/css/_nav.sass
@@ -13,9 +13,9 @@ nav
 
   &.fixed
     position: fixed
-    background: rgba(0, 0, 0, 0.6)
-    backdrop-filter: blur(16px)
-    -webkit-backdrop-filter: blur(16px)
+    background: rgba(0, 0, 0, 0.75)
+    backdrop-filter: saturate(180%) blur(20px)
+    -webkit-backdrop-filter: saturate(180%) blur(20px)
 
   .header-title
     span
