--- a/index.jade
+++ b/index.jade
@@ -32,12 +32,12 @@ body
                 h3 DYLΛN LΛRSEN
                 h1 Lorem ipsum, dolor sit amet.
     #about.about-section
-        .about-title
+        .about-title.parallax-landing.parallax-landing-hidden
             h1 About
         .about-content
-            .about-image
+            .about-image.parallax-landing.parallax-landing-hidden
                 img(src="./images/profile.jpg").profile-image
-            span.text Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
+            span.text.parallax-landing.parallax-landing-hidden Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
     #images.parallax-parent
         .heading-section
             #images-parallax.heading-background.parallax(style="background-image: url('./images/images-background-1440.jpg')")
