Started image grid

--- a/css/_body.sass
+++ b/css/_body.sass
@@ -125,3 +125,27 @@
 
         @media(max-width: 620px)
           font-size: 36px
+
+.content-section
+  height: 300px
+  background-color: white
+  transform: translate3d(0, 0, 0)
+
+  @media(max-width: 680px)
+    height: 200px
+
+  .grid
+    margin: 0 auto
+    width: 860px
+
+    @media(max-width: 860px)
+      width: 100%
+
+    ul
+      padding: 0
+      margin: 0
+      display: flex
+      flex-direction: row
+
+      li
+        list-style: none
