--- a/index.jade
+++ b/index.jade
@@ -45,6 +45,22 @@ body
             .heading-title
                 .heading-text
                     h1 Photos
+        .content-section
+            .grid
+                ul
+                    li
+                        img(src="./images/images-background-1440.jpg")
+                    li
+                        img(src="./images/images-background-1440.jpg")
+                    li
+                        img(src="./images/images-background-1440.jpg")
+                ul
+                    li
+                        img(src="./images/images-background-1440.jpg")
+                    li
+                        img(src="./images/images-background-1440.jpg")
+                    li
+                        img(src="./images/images-background-1440.jpg")
     .placeholder
 
     footer
