Added load animation

--- a/index.jade
+++ b/index.jade
@@ -9,10 +9,10 @@ head
     //- link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300' type='text/css')
 body
     nav
-        .header-title
+        .header-title.load-animation.load-animation-start
             a(href="")
                 span DYLΛN LΛRSEN
-        .header-navigation
+        .header-navigation.load-animation.load-animation-start
             a(href="#intro")#intro-nav.selected
                 span Home
             a(href="#about")#about-nav
@@ -29,8 +29,8 @@ body
             .darken-30
         .intro-title
             .intro-text
-                h3 DYLΛN LΛRSEN
-                h1 Lorem ipsum, dolor sit amet.
+                h3.load-animation.load-animation-start DYLΛN LΛRSEN
+                h1.load-animation.load-animation-start Lorem ipsum, dolor sit amet.
     #about.about-section
         .about-title.parallax-landing.parallax-landing-hidden
             h1 About
