--- a/css/_body.sass
+++ b/css/_body.sass
@@ -1,3 +1,12 @@
+.load-animation
+  transition: transform cubic-bezier(0.22, 0.61, 0.36, 1) 0.6s, opacity ease-in 0.5s
+  transform: translate(0, 0px)
+  opacity: 1
+
+  &.load-animation-start
+    transform: translate(0, 100px)
+    opacity: 0
+
 .intro-section
   position: relative
   height: 100vh
