Added image grid

--- a/index.jade
+++ b/index.jade
@@ -49,18 +49,18 @@ body
             .grid
                 ul
                     li
-                        img(src="./images/images-background-1440.jpg")
+                        .image(style="background-image: url(./images/images-background-1440.jpg)")
                     li
-                        img(src="./images/images-background-1440.jpg")
+                        .image(style="background-image: url(./images/images-background-1440.jpg)")
                     li
-                        img(src="./images/images-background-1440.jpg")
+                        .image(style="background-image: url(./images/images-background-1440.jpg)")
                 ul
                     li
-                        img(src="./images/images-background-1440.jpg")
+                        .image(style="background-image: url(./images/images-background-1440.jpg)")
                     li
-                        img(src="./images/images-background-1440.jpg")
+                        .image(style="background-image: url(./images/images-background-1440.jpg)")
                     li
-                        img(src="./images/images-background-1440.jpg")
+                        .image(style="background-image: url(./images/images-background-1440.jpg)")
     .placeholder
 
     footer
