--- a/css/_body.sass
+++ b/css/_body.sass
@@ -136,16 +136,13 @@
           font-size: 36px
 
 .content-section
-  height: 300px
   background-color: white
   transform: translate3d(0, 0, 0)
-
-  @media(max-width: 680px)
-    height: 200px
 
   .grid
     margin: 0 auto
     width: 860px
+    padding-top: 2px
 
     @media(max-width: 860px)
       width: 100%
@@ -158,3 +155,27 @@
 
       li
         list-style: none
+        overflow: hidden
+        width: 280px
+        height: 280px
+        margin: 2px
+
+        .image
+          width: 280px
+          height: 280px
+          top: 0
+          left: 0
+          position: relative
+          background-size: cover
+          background-position: center center
+          transition: all 0.2s ease-out
+
+          @media(max-width: 860px)
+            width: calc(100vw/3)
+            height: calc(100vw/3)
+
+          &:hover
+            width: 300px
+            height: 300px
+            top: -10px
+            left: -10px
