--- a/css/_body.sass
+++ b/css/_body.sass
@@ -142,7 +142,7 @@
   .grid
     margin: 0 auto
     width: 860px
-    padding-top: 2px
+    padding: 2px 0
 
     @media(max-width: 860px)
       width: 100%
