Removed placeholder div

--- a/css/style.sass
+++ b/css/style.sass
@@ -5,6 +5,6 @@
 @import _parallax
 @import _darken
 
-.placeholder
-  height: 125vh
-  background-color: white
+// .placeholder
+//   height: 125vh
+//   background-color: white
