--- a/index.jade
+++ b/index.jade
@@ -91,7 +91,7 @@ body
                         .image(style="background-image: url(./images/images-background-1440.jpg)")
                     li
                         .image(style="background-image: url(./images/images-background-1440.jpg)")
-    .placeholder
+    //- .placeholder
 
     footer
         .footer-content
