Cleaned up javascript and added TODO

--- a/css/_body.sass
+++ b/css/_body.sass
@@ -159,6 +159,7 @@
         width: 280px
         height: 280px
         margin: 2px
+        cursor: pointer
 
         .image
           width: 280px
